package yujing.spring2021.term_project;

public abstract class MenuItemDecorator extends MenuItem{
    MenuItem menuItem;
}
